--- a/modules/mod_backup/translations/pl.po
+++ b/modules/mod_backup/translations/pl.po
@@ -170,7 +170,7 @@ msgstr ""
 #: modules/mod_backup/templates/admin_backup.tpl:39
 msgid ""
 "The \"tar\" command was not found in the path. Set the \"tar\" config key to "
-"the path to pg_dump and return to this page."
+"the path to tar and return to this page."
 msgstr ""
 "Polecenie \"tar\" nie zostało znalezione. W konfiguracji systemu ustaw "
 "ścieżkę do polecenia tar jako wartość zmiennej \"tar\" i wróć tutaj."
