--- a/modules/mod_acl_simple_roles/translations/nl.po
+++ b/modules/mod_acl_simple_roles/translations/nl.po
@@ -73,8 +73,8 @@ msgid "Categories"
 msgstr "Categorieën"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:12
-msgid "Check below what people that are member of this role are allowed to do."
-msgstr "Kies hieronder wat de leden van deze rol mogen doen."
+msgid "Check below what people that are member of this role are allowed to do"
+msgstr "Kies hieronder wat de leden van deze rol mogen doen"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:38
 msgid "Community members"
