--- a/modules/mod_acl_simple_roles/translations/pl.po
+++ b/modules/mod_acl_simple_roles/translations/pl.po
@@ -66,8 +66,8 @@ msgid "Categories"
 msgstr "Kategorie"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:12
-msgid "Check below what people that are member of this role are allowed to do."
-msgstr "Sprawdź poniżej, jakie uprawnienia mają użytkownicy, którym przypisano tę rolę."
+msgid "Check below what people that are member of this role are allowed to do"
+msgstr "Sprawdź poniżej, jakie uprawnienia mają użytkownicy, którym przypisano tę rolę"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:38
 msgid "Community members"
