--- a/modules/mod_acl_simple_roles/translations/ru.po
+++ b/modules/mod_acl_simple_roles/translations/ru.po
@@ -85,10 +85,10 @@ msgid "Categories"
 msgstr "Категории"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:12
-msgid "Check below what people that are member of this role are allowed to do."
+msgid "Check below what people that are member of this role are allowed to do"
 msgstr ""
 "Выберите, что могут делать пользователи, обладающие этой ролью, из списка "
-"ниже."
+"ниже"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:38
 msgid "Community members"
