--- a/modules/mod_acl_simple_roles/translations/tr.po
+++ b/modules/mod_acl_simple_roles/translations/tr.po
@@ -66,8 +66,8 @@ msgid "Categories"
 msgstr "Kategoriler"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:12
-msgid "Check below what people that are member of this role are allowed to do."
-msgstr "Bu role üye olan kişilerin neler için izin sahibi olduğunu aşağıdan kontrol ediniz."
+msgid "Check below what people that are member of this role are allowed to do"
+msgstr "Bu role üye olan kişilerin neler için izin sahibi olduğunu aşağıdan kontrol ediniz"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:38
 msgid "Community members"
