--- a/modules/mod_acl_simple_roles/translations/zh.po
+++ b/modules/mod_acl_simple_roles/translations/zh.po
@@ -75,7 +75,7 @@ msgid "Categories"
 msgstr "分类"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:12
-msgid "Check below what people that are member of this role are allowed to do."
+msgid "Check below what people that are member of this role are allowed to do"
 msgstr "在下面选择角色允许的行为。"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:38
