--- a/modules/mod_acl_simple_roles/translations/tr.po
+++ b/modules/mod_acl_simple_roles/translations/tr.po
@@ -86,7 +86,7 @@ msgid "Group members"
 msgstr "Grup üyeleri"
 
 #: modules/mod_acl_simple_roles/templates/_admin_edit_content.acl_role.tpl:8
-msgid "Help about ACL roles."
+msgid "Help about ACL roles"
 msgstr "Erişim kontrolü yardımı"
 
 #: modules/mod_acl_simple_roles/templates/admin_acl.tpl:16
