--- a/modules/mod_admin/translations/pl.po
+++ b/modules/mod_admin/translations/pl.po
@@ -405,20 +405,20 @@ msgid "Header"
 msgstr "Nagłówek"
 
 #: modules/mod_admin/templates/_admin_edit_content_date_range.tpl:12
-msgid "Help about date ranges."
-msgstr "Okresy czasu - pomoc."
+msgid "Help about date ranges"
+msgstr "Okresy czasu - pomoc"
 
 #: modules/mod_admin/templates/_admin_edit_content_page_connections.tpl:15
-msgid "Help about page connections."
-msgstr "Połączenia ze stronami - pomoc."
+msgid "Help about page connections"
+msgstr "Połączenia ze stronami - pomoc"
 
 #: modules/mod_admin/templates/_admin_edit_content_person.tpl:12
-msgid "Help about person name."
-msgstr "Imię użytkownika - pomoc."
+msgid "Help about person name"
+msgstr "Imię użytkownika - pomoc"
 
 #: modules/mod_admin/templates/_admin_edit_content_pub_period.tpl:12
-msgid "Help about publication date range."
-msgstr "Termin publikacji - pomoc."
+msgid "Help about publication date range"
+msgstr "Termin publikacji - pomoc"
 
 #: modules/mod_admin/templates/_admin_edit_content.query.tpl:14
 msgid ""
