--- a/modules/mod_admin/translations/zh.po
+++ b/modules/mod_admin/translations/zh.po
@@ -407,23 +407,23 @@ msgid "Header"
 msgstr "题头"
 
 #: modules/mod_admin/templates/_admin_edit_content_date_range.tpl:12
-msgid "Help about date ranges."
+msgid "Help about date ranges"
 msgstr "日期范围帮助。"
 
 #: modules/mod_admin/templates/_admin_edit_meta_features.tpl:12
-msgid "Help about features."
+msgid "Help about features"
 msgstr "特性帮助。"
 
 #: modules/mod_admin/templates/_admin_edit_content_page_connections.tpl:15
-msgid "Help about page connections."
+msgid "Help about page connections"
 msgstr "页面连接帮助。"
 
 #: modules/mod_admin/templates/_admin_edit_content_person.tpl:12
-msgid "Help about person name."
+msgid "Help about person name"
 msgstr "人名帮助。"
 
 #: modules/mod_admin/templates/_admin_edit_content_pub_period.tpl:12
-msgid "Help about publication date range."
+msgid "Help about publication date range"
 msgstr "发布时间范围帮助。"
 
 #: modules/mod_admin/templates/_admin_edit_content.query.tpl:14
