--- a/modules/mod_admin_identity/translations/es.po
+++ b/modules/mod_admin_identity/translations/es.po
@@ -112,8 +112,8 @@ msgstr ""
 "creará una página de <em>persona</em> para este usuario."
 
 #: modules/mod_admin_identity/templates/_admin_edit_sidebar.person.tpl:10
-msgid "Help about user credentials."
-msgstr "Ayuda acerca de credenciales de usuario."
+msgid "Help about user credentials"
+msgstr "Ayuda acerca de credenciales de usuario"
 
 #: modules/mod_admin_identity/templates/admin_users.tpl:21
 msgid "Make a new user"
