--- a/modules/mod_admin_identity/translations/et.po
+++ b/modules/mod_admin_identity/translations/et.po
@@ -109,8 +109,8 @@ msgstr ""
 "<em>isiku</em> leht."
 
 #: modules/mod_admin_identity/templates/_admin_edit_sidebar.person.tpl:10
-msgid "Help about user credentials."
-msgstr "Abi kasutajatunnuste kohta."
+msgid "Help about user credentials"
+msgstr "Abi kasutajatunnuste kohta"
 
 #: modules/mod_admin_identity/templates/admin_users.tpl:21
 msgid "Make a new user"
