--- a/modules/mod_admin_identity/translations/ru.po
+++ b/modules/mod_admin_identity/translations/ru.po
@@ -111,8 +111,8 @@ msgstr ""
 "категории <em>person</em> будет создана для нового пользователя."
 
 #: modules/mod_admin_identity/templates/_admin_edit_sidebar.person.tpl:10
-msgid "Help about user credentials."
-msgstr "Справка об учетных записях."
+msgid "Help about user credentials"
+msgstr "Справка об учетных записях"
 
 #: modules/mod_admin_identity/templates/admin_users.tpl:21
 msgid "Make a new user"
