--- a/modules/mod_admin_identity/translations/zh.po
+++ b/modules/mod_admin_identity/translations/zh.po
@@ -105,7 +105,7 @@ msgstr ""
 "设置新用户的名字和 e-mail 地址。系统会自动为他创建一个<em>人员</em>页面。"
 
 #: modules/mod_admin_identity/templates/_admin_edit_sidebar.person.tpl:10
-msgid "Help about user credentials."
+msgid "Help about user credentials"
 msgstr "用户认证信息帮助"
 
 #: modules/mod_admin_identity/templates/admin_users.tpl:21
