--- a/modules/mod_admin_predicate/translations/nl.po
+++ b/modules/mod_admin_predicate/translations/nl.po
@@ -44,8 +44,8 @@ msgstr "Van categorie"
 
 #: ./modules/mod_admin_predicate/templates/_admin_edit_content.predicate.tpl:9 
 msgid ""
-"Help about predicates."
-msgstr "Hulp over predicaten."
+"Help about predicates"
+msgstr "Hulp over predicaten"
 
 #: ./modules/mod_admin_predicate/templates/admin_predicate.tpl:15 
 msgid ""
