--- a/modules/mod_backup/translations/ru.po
+++ b/modules/mod_backup/translations/ru.po
@@ -92,8 +92,8 @@ msgid "Download backup file"
 msgstr "Скачать файл с резервной копией"
 
 #: modules/mod_backup/templates/_admin_edit_sidebar.tpl:16
-msgid "Help about backup &amp; restore."
-msgstr "Справка о резервном копировании и восстановлении."
+msgid "Help about backup &amp; restore"
+msgstr "Справка о резервном копировании и восстановлении"
 
 #: modules/mod_backup/templates/_admin_edit_sidebar.tpl:22
 msgid "List and restore an earlier version"
