--- a/modules/mod_mailinglist/translations/nl.po
+++ b/modules/mod_mailinglist/translations/nl.po
@@ -314,12 +314,12 @@ msgid "Hello,"
 msgstr "Hallo,"
 
 #: modules/mod_mailinglist/templates/_admin_edit_sidebar.mailinglist.tpl:8
-msgid "Help about mailing lists."
-msgstr "Hulp over mailinglijsten."
+msgid "Help about mailing lists"
+msgstr "Hulp over mailinglijsten"
 
 #: modules/mod_mailinglist/templates/admin_mailing_status.tpl:19
-msgid "Help about the mailing page."
-msgstr "Hulp over de mailingpagina."
+msgid "Help about the mailing page"
+msgstr "Hulp over de mailingpagina"
 
 #: modules/mod_mailinglist/templates/email_mailinglist_goodbye.tpl:8
 msgid "Hope to see you again."
