--- a/modules/mod_mailinglist/translations/ru.po
+++ b/modules/mod_mailinglist/translations/ru.po
@@ -330,12 +330,12 @@ msgid "Hello,"
 msgstr "Здравствуйте,"
 
 #: modules/mod_mailinglist/templates/_admin_edit_sidebar.mailinglist.tpl:8
-msgid "Help about mailing lists."
-msgstr "Справка о списках адресатов."
+msgid "Help about mailing lists"
+msgstr "Справка о списках адресатов"
 
 #: modules/mod_mailinglist/templates/admin_mailing_status.tpl:19
-msgid "Help about the mailing page."
-msgstr "Справка о странице рассылки."
+msgid "Help about the mailing page"
+msgstr "Справка о странице рассылки"
 
 #: modules/mod_mailinglist/templates/email_mailinglist_goodbye.tpl:8
 msgid "Hope to see you again."
