--- a/modules/mod_mailinglist/translations/tr.po
+++ b/modules/mod_mailinglist/translations/tr.po
@@ -315,12 +315,12 @@ msgid "Hello,"
 msgstr "Merhaba,"
 
 #: modules/mod_mailinglist/templates/_admin_edit_sidebar.mailinglist.tpl:8
-msgid "Help about mailing lists."
-msgstr "Mail listesi yardımı."
+msgid "Help about mailing lists"
+msgstr "Mail listesi yardımı"
 
 #: modules/mod_mailinglist/templates/admin_mailing_status.tpl:19
-msgid "Help about the mailing page."
-msgstr "Mail sayfası yardımı."
+msgid "Help about the mailing page"
+msgstr "Mail sayfası yardımı"
 
 #: modules/mod_mailinglist/templates/email_mailinglist_goodbye.tpl:8
 msgid "Hope to see you again."
