--- a/modules/mod_translation/translations/es.po
+++ b/modules/mod_translation/translations/es.po
@@ -109,8 +109,8 @@ msgid "Generate .pot files"
 msgstr "Generar archivos .pot"
 
 #: modules/mod_translation/templates/_admin_edit_sidebar.tpl:12
-msgid "Help about translations."
-msgstr "Ayuda acerca de las traducciones."
+msgid "Help about translations"
+msgstr "Ayuda acerca de las traducciones"
 
 #: modules/mod_translation/templates/admin_translation.tpl:24
 #: modules/mod_translation/templates/_dialog_language_edit.tpl:6
