--- a/modules/mod_translation/translations/et.po
+++ b/modules/mod_translation/translations/et.po
@@ -105,8 +105,8 @@ msgid "Generate .pot files"
 msgstr "Genereeri .pot failid"
 
 #: modules/mod_translation/templates/_admin_edit_sidebar.tpl:12
-msgid "Help about translations."
-msgstr "Tõlkimise abi."
+msgid "Help about translations"
+msgstr "Tõlkimise abi"
 
 #: modules/mod_translation/templates/admin_translation.tpl:24
 #: modules/mod_translation/templates/_dialog_language_edit.tpl:6
