--- a/modules/mod_translation/translations/nl.po
+++ b/modules/mod_translation/translations/nl.po
@@ -105,7 +105,7 @@ msgid "Generate .pot files"
 msgstr "Genereer .pot bestanden"
 
 #: modules/mod_translation/templates/_admin_edit_sidebar.tpl:12
-msgid "Help about translations."
+msgid "Help about translations"
 msgstr "Help over talen"
 
 #: modules/mod_translation/templates/admin_translation.tpl:24
