mod_admin: Fix link to query documentation
Fixes #879

--- a/modules/mod_admin/translations/de.po
+++ b/modules/mod_admin/translations/de.po
@@ -430,12 +430,12 @@ msgstr "Hilfe zu Veröffentlichungszeiträumen"
 msgid ""
 "Here you can edit the arguments of the  search query. Every argument goes on "
 "its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Hier können Sie die Argumente einer Suchanfrage bearbeiten. Jedes Argument "
 "kommt in eine neue Zeile. Für weitere Informationen, konsultieren Sie die <a "
-"href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">Dokumentation über Query-Argumente</a> auf der Zotonic-Webseite."
 
 #: modules/mod_admin/templates/_admin_edit_content_person.tpl:12
