--- a/modules/mod_admin/translations/es.po
+++ b/modules/mod_admin/translations/es.po
@@ -440,12 +440,12 @@ msgstr "Ayuda acerca de rangos de fechas de publicación"
 msgid ""
 "Here you can edit the arguments of the  search query. Every argument goes on "
 "its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Aquí puede editar los argumentos de una consulta de búsqueda. Cada argumento "
 "va en su propia línea. Para más información ver la\n"
-"\t\t<a href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentación de los argumentos de consulta</a> en el sitio web de "
 "Zotonic."
 
