--- a/modules/mod_admin/translations/et.po
+++ b/modules/mod_admin/translations/et.po
@@ -395,12 +395,12 @@ msgstr ""
 msgid ""
 "Here you can edit the arguments of the  search query. Every argument goes "
 "on its own line. For more information, see the\n		<a "
-"href=\"http://zotonic.com/documentation/761/the-query-search-model\">docu"
+"href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html\">docu"
 "mentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Siin saad redigeerida otsingupäringute argumente. Iga argument eraldi real. "
 "Lisainformatsiooniks vaata\n          <a "
-"href=\"http://zotonic.com/documentation/761/the-query-search-model\">"
+"href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html\">"
 "päringute parameetride dokumentatsiooni/a> Zotonic'u veebilehel."
 
 #: ./modules/mod_admin/templates/_admin_edit_content_person.tpl:14 
