--- a/modules/mod_admin/translations/ru.po
+++ b/modules/mod_admin/translations/ru.po
@@ -430,12 +430,12 @@ msgstr "Справка о периоде публикации"
 msgid ""
 "Here you can edit the arguments of the  search query. Every argument goes on "
 "its own line. For more information, see the\n"
-"\t\t<a href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">documentation on the query arguments</a> on the Zotonic website."
 msgstr ""
 "Здесь вы можете изменить аргументы поискового запроса. Каждый аргумент "
 "ставится на отдельной строке. Для дополнительных сведений смотрите\n"
-"\t\t<a href=\"http://zotonic.com/documentation/761/the-query-search-model"
+"\t\t<a href=\"http://zotonic.com/docs/latest/manuals/datamodel/search.html"
 "\">справку по аргументам запросов</a> на сайте Zotonic."
 
 #: modules/mod_admin/templates/_admin_edit_content_person.tpl:12
